--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sass": "^1.35.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "sweetalert2": "^11.0.18",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
